[package]
name = "tinyvecdeque"
description = "`VecDeque`-like data structures"
authors = [ "Yuxuan Shui <yshuiv7@gmail.com>" ]
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["vec", "no_std", "no-std"]
categories = ["data-structures", "no-std"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
tinyvec = "1.6"

[features]
default = []
std = ["tinyvec/std"]
serde = ["dep:serde", "tinyvec/serde"]
